<resources>
    <string name="app_name">serlinkstock</string>
    <string name="main_opening_price">開盤價</string>
    <string name="main_highest_price">最高價</string>
    <string name="main_change">漲跌價差</string>
    <string name="main_transaction">成交筆數</string>
    <string name="main_trade_volume">成交股數</string>
    <string name="main_trade_value">成交金額</string>
    <string name="main_monthly_average_price">月平均價</string>
    <string name="main_lowest_price">最低價</string>
    <string name="main_closing_price">收盤價</string>
</resources>